cluster/default/omada/omada.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omada
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: omada
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada
  namespace: default
spec:
  selector:
    matchLabels:
      app: omada
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: omada
    spec:
      hostNetwork: true
      securityContext:
        sysctls:
          - name: net.ipv4.ip_unprivileged_port_start
            value: "0"
      containers:
        - image: mbentley/omada-controller:5.5
          name: omada
          resources:
            requests:
              cpu: 100m
              memory: 400Mi
            limits:
              memory: 1.0Gi
          ports:
            - containerPort: 443
              name: omada
          volumeMounts:
            - name: pv-omada
              mountPath: /opt/tplink/EAPController/data
      volumes:
        - name: pv-omada
          persistentVolumeClaim:
            claimName: omada-pvc-v3
