cluster/default/omada/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada
  namespace: default
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
    nginx.ingress.kubernetes.io/upstream-vhost: 'omada.sko.ai:8043'
    nginx.ingress.kubernetes.io/proxy-redirect-from: '~https://(.+):8043/(.+)/login$'
    nginx.ingress.kubernetes.io/proxy-redirect-to: 'https://$http_host/$2/login'
spec:
  rules:
    - host: omada.sko.ai
      http:
        paths:
          - backend:
              service:
                name: omada
                port: 
                  number: 8043
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - omada.sko.ai
